<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#87CEfa"
    tools:context=".MainActivity2">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:id="@+id/uploadpic"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:contentDescription="@string/todo"
        app:srcCompat="@android:drawable/ic_menu_camera" />
    <ProgressBar
        android:id="@+id/progressbar3"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        />
</RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:text="@string/app_name"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="50sp" />
    <EditText
        android:id="@+id/name"
        android:layout_width="288dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:hint="@string/name"
        android:textColorHint="@color/colorPrimary"
        android:textColor="@color/colorPrimaryDark"
        />
    <EditText
        android:id="@+id/phone"
        android:layout_width="288dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_gravity="center"
        android:hint="@string/phone"
        android:textColorHint="@color/colorPrimary"
        android:layout_marginTop="25dp"
        android:inputType="phone"
        android:textColor="@color/colorPrimaryDark" />
    <EditText
        android:id="@+id/email"
        style="@android:style/Widget.EditText"
        android:layout_width="288dp"
        android:layout_height="wrap_content"
        android:background="?attr/editTextBackground"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:singleLine="true"
        android:textColor="@color/colorPrimaryDark"
        android:textColorHint="@color/colorPrimary"
        android:visibility="visible"
        android:layout_gravity="center"
        android:layout_margin="25dp"
        />
    <EditText
        android:layout_width="288dp"
        android:layout_height="wrap_content"
        android:id="@+id/password"
        android:hint="@string/password"
        android:textColor="@color/colorPrimaryDark"
        android:textColorHint="@color/colorPrimary"
        android:layout_gravity="center"
        android:inputType="textPassword"
        />


    <Button
        android:id="@+id/signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:background="@drawable/button_bg"
        android:shadowColor="@color/colorPrimaryDark"
        android:shadowDx="@integer/google_play_services_version"
        android:text="@string/signup" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Already a member?"
        android:textColor="@color/colorPrimaryDark"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="Login"
        android:textColor="@color/colorPrimary"
        android:textSize="15sp"
        android:id="@+id/login"/>

</LinearLayout>